--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,8 @@
 ---
-
-import VideoHeader from "../components/VideoHeader.astro";
 import "../styles/global.css";
-
+import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-
-<VideoHeader
-  src="/videoTrail2024.mp4"
-  poster="/frameTrail2024.jpg"
-  title="Bienvenido a la Carrera de Trail"
-  description="Inscríbete y disfruta de la aventura."
-/>
+<MainLayout title="Bienvenido" description="Esta es la página principal">
+  
+</MainLayout>
