--- a/src/components/fields/RoundedInfoField.astro
+++ b/src/components/fields/RoundedInfoField.astro
@@ -2,12 +2,13 @@
 const { text, icon } = Astro.props;
 ---
 
-<div class="flex flex-row rounded-full py-3 px-6 items-center gap-2">
-    <svg class="w-8 h-8 text-[#e49a69] mb-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 10h16m-8-3V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Zm3-7h.01v.01H8V13Zm4 0h.01v.01H12V13Zm4 0h.01v.01H16V13Zm-8 4h.01v.01H8V17Zm4 0h.01v.01H12V17Zm4 0h.01v.01H16V17Z"/>
+<div class="flex flex-row rounded-full py-2 px-5 items-center gap-2  justify-center">
+    <svg class="w-7 h-7 text-[#e49a69] mb-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d={icon}/>
     </svg>
     <h4 class="text-lg font-semibold">{text}</h4>
 </div>
+
 
 <style>
     div {
