--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -3,6 +3,7 @@ const { title, description } = Astro.props;
 
 const canonicalURL = Astro.site ? new URL(Astro.url.pathname, Astro.site).toString() : null;
 
+const fullTitle = "Valle de Arbas | " + title;
 ---
 
 <head>
@@ -11,8 +12,8 @@ const canonicalURL = Astro.site ? new URL(Astro.url.pathname, Astro.site).toStri
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 	<!-- Primary Meta Tags -->
-	<title>{title}</title>
-	<meta name="title" content={title} />
+	<title>{fullTitle}</title>
+	<meta name="title" content={fullTitle} />
 	<meta name="description" content={description} />
 	<link rel="canonical" href={canonicalURL} />
 
