--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,6 @@ import MainLayout from "../layouts/MainLayout.astro";
 
 
 
-<MainLayout title="Bienvenido" description="Esta es la página principal">
+<MainLayout title="Inicio" description="Página web de inicio del Trail Valle de Arbas">
 
 </MainLayout>
