--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -3,6 +3,7 @@ import BaseHead from '../components/BaseHead.astro';
 import VideoHeader from '../components/VideoHeader.astro';
 import StickyMenu from '../components/StickyMenu.astro';
 import SimpleCarousel from '../components/SimpleCarousel.astro';
+import InfoSection from '../components/sections/InfoSection.astro';
 
 const { title, description } = Astro.props;
 ---
@@ -26,19 +27,34 @@ const { title, description } = Astro.props;
         carrera <span class="text-gradient font-bold">TRAIL VALLE DE ARBAS</span>. Como puedes ver
         en las fotos se trata de un valle que no deja indiferente a nadie.
       </p>
-      
+
       <SimpleCarousel />
 
-      <h2 class="text-3xl font-bold text-center mt-8 mb-4">Multiples categorías</h2>
-      <p class="text-center text-lg w-[90%] mx-auto">Para que todos puedan disfrutar de estos paisajes hemos preparado varias categorías para que puedas elegir la que más se adapte a ti.</p>
+      <InfoSection
+        title="Multiples categorías"
+        description="Para que todos puedan disfrutar de estos paisajes hemos preparado varias categorías para que puedas elegir la que más se adapte a ti."
+        cardTitle="3 Distancias"
+        cardDescription="Desde 10km hasta 42km, para todos los niveles."
+        cardIcon="M11.906 1.994a8.002 8.002 0 0 1 8.09 8.421 7.996 7.996 0 0 1-1.297 3.957.996.996 0 0 1-.133.204l-.108.129c-.178.243-.37.477-.573.699l-5.112 6.224a1 1 0 0 1-1.545 0L5.982 15.26l-.002-.002a18.146 18.146 0 0 1-.309-.38l-.133-.163a.999.999 0 0 1-.13-.202 7.995 7.995 0 0 1 6.498-12.518ZM15 9.997a3 3 0 1 1-5.999 0 3 3 0 0 1 5.999 0Z"
+        cardLink="/info#carrera-montana"
+      />
       
-      </p>
+      <InfoSection
+        title="Normativa y Recomendaciones"
+        description="Con el fin de que la carrera se desarrolle de forma segura y exitosa, es importante que leas las normas y recomendaciones."
+        cardTitle="Normativa"
+        cardDescription="Comprueba el material y las recomendaciones"
+        cardIcon="M12 6.03v13m0-13c-2.819-.831-4.715-1.076-8.029-1.023A.99.99 0 0 0 3 6v11c0 .563.466 1.014 1.03 1.007 3.122-.043 5.018.212 7.97 1.023m0-13c2.819-.831 4.715-1.076 8.029-1.023A.99.99 0 0 1 21 6v11c0 .563-.466 1.014-1.03 1.007-3.122-.043-5.018.212-7.97 1.023"
+        cardLink="/info#normativa"
+      />
     </main>
     <footer class="mt-5000">
       <p>Gracias por visitar</p>
     </footer>
   </body>
 </html>
+
+
 
 <style>
   .stiky {
