feat: ajustar tamaños de texto y márgenes en varios componentes para mejorar la legibilidad y el diseño

--- a/src/components/sections/InfoSection.astro
+++ b/src/components/sections/InfoSection.astro
@@ -5,9 +5,9 @@ import HugeInfoField from '../fields/HugeInfoField.astro';
 
 <section class="mb-20">
   <div class="title-center">
-    <h2 class="text-3xl font-bold title-underline mt-8 mb-4">{title}</h2>
+    <h2 class="text-2xl font-bold title-underline mt-8 mb-4">{title}</h2>
   </div>
-  <p class="text-center text-lg w-[90%] mx-auto">
+  <p class="text-center text-base w-[90%] mx-auto">
     {description}
   </p>
 
