--- a/src/components/fields/HugeInfoField.astro
+++ b/src/components/fields/HugeInfoField.astro
@@ -4,7 +4,7 @@ const { icon, title, description, link } = Astro.props;
 
 <div class="flex flex-col items-center justify-center gap-2 main-container">
   <svg
-    class="w-9 h-9 text-[#e49a69] mb-1"
+    class="w-7 h-7 text-[#e49a69] mb-1"
     aria-hidden="true"
     xmlns="http://www.w3.org/2000/svg"
     width="24"
@@ -20,11 +20,11 @@ const { icon, title, description, link } = Astro.props;
       d={icon}></path>
   </svg>
 
-  <h4 class="text-xl font-bold text-center">{title}</h4>
-  <p class="text-lg text-center">{description}</p>
+  <h4 class="text-lg font-bold text-center">{title}</h4>
+  <p class="text-sm text-center">{description}</p>
   <a href={link} class="button-link">
     <button
-      class="mt-2 px-6 py-2 bg-[#e49a69] text-white rounded hover:bg-[#d88b5c] transition-colors focus:ring-2 focus:ring-[#e49a69] focus:ring-opacity-50 cursor-pointer"
+      class="mt-2 px-6 py-2 bg-[#e49a69] text-sm text-white rounded hover:bg-[#d88b5c] transition-colors focus:ring-2 focus:ring-[#e49a69] focus:ring-opacity-50 cursor-pointer"
     >
       Más información
     </button>
