--- a/src/components/StickyMenu.astro
+++ b/src/components/StickyMenu.astro
@@ -3,7 +3,7 @@
 ---
 <header class="sticky-menu flex items-center justify-between px-4 py-4 w-full">
   <div class="flex items-center gap-3 ml-2">
-    <img src="/ms-icon-144x144.png" alt="Logo Valle de Arbas" class="h-12 w-12 object-contain" />
+    <img src="/ms-icon-144x144.png" alt="Logo Valle de Arbas" class="h-12 w-12 object-contain" loading="lazy" />
     <span class="font-bold text-2xl text-white">Valle de Arbas</span>
   </div>
   <nav class="header-menu">
