--- a/src/components/MainFooter.astro
+++ b/src/components/MainFooter.astro
@@ -2,16 +2,16 @@
 
 ---
 
-<section class="flex flex-col items-center justify-center p-6 bg-gray-900 mt-20">
+<section class="flex flex-col items-start justify-center p-6 bg-gray-900 mt-20">
   <h3 class="text-2xl font-bold text-[#f5f5f6]">Trail Valle de Arbas</h3>
-  <p class="text-[#f5f5f6] w-[80%] text-center mt-4">
+  <p class="text-[#f5f5f6] w-[80%] mt-4">
     Descubre la aventura del trail running en uno de los paisajes más espectaculares de León. Una
     experiencia única que combina deporte y naturaleza
   </p>
-  <div class="flex flex-row items-center justify-center gap-4 mt-6">
+  <div class="flex flex-row items-center justify-center gap-4 mt-2">
     <a href="#" class="cursor-pointer">
       <svg
-        class="w-10 h-10 text-gray-800 dark:text-white"
+        class="w-8 h-8 text-gray-800 dark:text-white"
         aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg"
         width="24"
@@ -28,7 +28,7 @@
     </a>
     <a href="">
       <svg
-        class="w-10 h-10 text-gray-800 dark:text-white"
+        class="w-8 h-8 text-gray-800 dark:text-white"
         aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg"
         width="24"
@@ -44,3 +44,110 @@
     </a>
   </div>
 </section>
+<section class="flex flex-col items-start justify-center bg-gray-900 px-6 pt-2 pb-10">
+  <h3 class="text-2xl font-bold text-[#f5f5f5] mb-4">Contacto</h3>
+  <ul class="flex flex-col gap-2">
+    <li>
+      <a href="#" class="list-item">
+        <svg
+          class="w-6 h-6 text-gray-800 dark:text-white"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          fill="none"
+          viewBox="0 0 24 24"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M11 16v-5.5A3.5 3.5 0 0 0 7.5 7m3.5 9H4v-5.5A3.5 3.5 0 0 1 7.5 7m3.5 9v4M7.5 7H14m0 0V4h2.5M14 7v3m-3.5 6H20v-6a3 3 0 0 0-3-3m-2 9v4m-8-6.5h1"
+          ></path>
+        </svg>
+        <span class="text-[#f5f5f6]"> correo@ejemplo.com </span>
+      </a>
+    </li>
+    <li>
+      <a href="#" class="list-item">
+        <svg
+          class="w-6 h-6 text-gray-800 dark:text-white"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          fill="none"
+          viewBox="0 0 24 24"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M18.427 14.768 17.2 13.542a1.733 1.733 0 0 0-2.45 0l-.613.613a1.732 1.732 0 0 1-2.45 0l-1.838-1.84a1.735 1.735 0 0 1 0-2.452l.612-.613a1.735 1.735 0 0 0 0-2.452L9.237 5.572a1.6 1.6 0 0 0-2.45 0c-3.223 3.2-1.702 6.896 1.519 10.117 3.22 3.221 6.914 4.745 10.12 1.535a1.601 1.601 0 0 0 0-2.456Z"
+          ></path>
+        </svg>
+        <span class="text-[#f5f5f6]"> +34 123 456 789 </span>
+      </a>
+    </li>
+    <li>
+      <a href="#" class="list-item">
+        <svg
+          class="w-6 h-6 text-gray-800 dark:text-white"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          fill="none"
+          viewBox="0 0 24 24"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M12 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"></path>
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M17.8 13.938h-.011a7 7 0 1 0-11.464.144h-.016l.14.171c.1.127.2.251.3.371L12 21l5.13-6.248c.194-.209.374-.429.54-.659l.13-.155Z"
+          ></path>
+        </svg>
+        <span class="text-[#f5f5f5]">Cubillas de Arbas, León</span>
+      </a>
+    </li>
+    <li>
+      <a href="#" class="list-item">
+        <svg
+          class="w-6 h-6 text-gray-800 dark:text-white"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          fill="none"
+          viewBox="0 0 24 24"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M4 10h16m-8-3V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Zm3-7h.01v.01H8V13Zm4 0h.01v.01H12V13Zm4 0h.01v.01H16V13Zm-8 4h.01v.01H8V17Zm4 0h.01v.01H12V17Zm4 0h.01v.01H16V17Z"
+          ></path>
+        </svg>
+        <span class="text-[#f5f5f6]">9-10 de mayo</span>
+      </a>
+    </li>
+  </ul>
+</section>
+
+<style>
+  .list-item {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+  }
+</style>
