--- a/src/components/MainFooter.astro
+++ b/src/components/MainFooter.astro
@@ -12,7 +12,7 @@
     <div class="flex flex-row items-center justify-center gap-4 mt-2">
       <a href="#" class="cursor-pointer">
         <svg
-          class="w-8 h-8 text-gray-800 dark:text-white"
+          class="w-8 h-8 text-[#f5f5f5]"
           aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -29,7 +29,7 @@
       </a>
       <a href="">
         <svg
-          class="w-8 h-8 text-gray-800 dark:text-white"
+          class="w-8 h-8 text-[#f5f5f5]"
           aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -51,7 +51,7 @@
       <li>
         <a href="#" class="list-item">
           <svg
-            class="w-6 h-6 text-gray-800 dark:text-white"
+            class="w-6 h-6 text-[#f5f5f5]"
             aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -73,7 +73,7 @@
       <li>
         <a href="#" class="list-item">
           <svg
-            class="w-6 h-6 text-gray-800 dark:text-white"
+            class="w-6 h-6 text-[#f5f5f5]"
             aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -95,7 +95,7 @@
       <li>
         <a href="#" class="list-item">
           <svg
-            class="w-6 h-6 text-gray-800 dark:text-white"
+            class="w-6 h-6 text-[#f5f5f5]"
             aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -123,7 +123,7 @@
       <li>
         <a href="#" class="list-item">
           <svg
-            class="w-6 h-6 text-gray-800 dark:text-white"
+            class="w-6 h-6 text-[#f5f5f5]"
             aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -139,10 +139,13 @@
               d="M4 10h16m-8-3V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Zm3-7h.01v.01H8V13Zm4 0h.01v.01H12V13Zm4 0h.01v.01H16V13Zm-8 4h.01v.01H8V17Zm4 0h.01v.01H12V17Zm4 0h.01v.01H16V17Z"
             ></path>
           </svg>
-          <span class="text-[#f5f5f6]">9-10 de mayo</span>
+          <span class="text-[#f5f5f5]">9-10 de mayo</span>
         </a>
       </li>
     </ul>
+  </section>
+  <section class="pt-10 copy-section pb-10">
+    <p class="text-sm text-center text-[#f5f5f5]">© 2025 Trail Valle de Arbas. Todos los derechos reservados.</p>
   </section>
 </div>
 
@@ -151,5 +154,10 @@
     display: flex;
     flex-direction: row;
     gap: 10px;
+  }
+
+  .copy-section{
+    border-top: 1px solid #f5f5f5;
+    margin: 0 20px;
   }
 </style>
