--- a/src/components/VideoHeader.astro
+++ b/src/components/VideoHeader.astro
@@ -12,7 +12,7 @@ const { src, title, poster } = Astro.props;
   </video>
   <div class="header-content">
     <div class="flex justify-center mb-4">
-      <h1 class="text-4xl text-center font-extrabold mt-4 w-[80%]">{title}</h1>
+      <h1 class="text-4xl text-center font-extrabold mt-4 w-[80%] md:text-5xl md:w-[90%]">{title}</h1>
     </div>
     <div class="flex flex-col gap-2 justify-center items-center mt-5">
       <RoundedInfoField
