--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -31,57 +31,66 @@ const { title, description } = Astro.props;
 
       <SimpleCarousel />
 
-      <InfoSection
-        title="Multiples categorías"
-        description="Para que todos puedan disfrutar de estos paisajes hemos preparado varias categorías para que puedas elegir la que más se adapte a ti."
-        cardTitle="3 Distancias"
-        cardDescription="Desde 10km hasta 42km, para todos los niveles."
-        cardIcon="M4 4v15a1 1 0 0 0 1 1h15M8 16l2.5-5.5 3 3L17.273 7 20 9.667"
-        cardLink="/info#carrera-montana"
-      />
-      
-      <InfoSection
-        title="Seguridad"
-        description="Con el fin de que la carrera se desarrolle de forma segura y exitosa, es importante que leas las normas y recomendaciones."
-        cardTitle="Normativa"
-        cardDescription="Comprueba el material y las recomendaciones"
-        cardIcon="M12 6.03v13m0-13c-2.819-.831-4.715-1.076-8.029-1.023A.99.99 0 0 0 3 6v11c0 .563.466 1.014 1.03 1.007 3.122-.043 5.018.212 7.97 1.023m0-13c2.819-.831 4.715-1.076 8.029-1.023A.99.99 0 0 1 21 6v11c0 .563-.466 1.014-1.03 1.007-3.122-.043-5.018.212-7.97 1.023"
-        cardLink="/info#normativa"
-      />
+      <section class="grid grid-cols-1 md:grid-cols-2 gap-4 p-4">
+        <InfoSection
+          title="Multiples categorías"
+          description="Hemos preparado varias categorías en el trail para que puedas elegir la que más se adapte a ti."
+          cardTitle="3 Distancias"
+          cardDescription="Desde 10km hasta 42km, para todos los niveles."
+          cardIcon="M4 4v15a1 1 0 0 0 1 1h15M8 16l2.5-5.5 3 3L17.273 7 20 9.667"
+          cardLink="/info#carrera-montana"
+        />
 
-      <InfoSection
-        title="Ubicaciones"
-        description="Consulta los puntos de interés y las ubicaciones clave del evento."
-        cardTitle="Mapa"
-        cardDescription="Explora el mapa del evento"
-        cardIcon="M11.906 1.994a8.002 8.002 0 0 1 8.09 8.421 7.996 7.996 0 0 1-1.297 3.957.996.996 0 0 1-.133.204l-.108.129c-.178.243-.37.477-.573.699l-5.112 6.224a1 1 0 0 1-1.545 0L5.982 15.26l-.002-.002a18.146 18.146 0 0 1-.309-.38l-.133-.163a.999.999 0 0 1-.13-.202 7.995 7.995 0 0 1 6.498-12.518ZM15 9.997a3 3 0 1 1-5.999 0 3 3 0 0 1 5.999 0Z"
-        cardLink="/info#ubicaciones"
-      />
+        <InfoSection
+          title="Seguridad"
+          description="Con el fin de que la carrera se desarrolle de forma segura y exitosa, es importante que leas las normas y recomendaciones."
+          cardTitle="Normativa"
+          cardDescription="Comprueba el material y las recomendaciones"
+          cardIcon="M12 6.03v13m0-13c-2.819-.831-4.715-1.076-8.029-1.023A.99.99 0 0 0 3 6v11c0 .563.466 1.014 1.03 1.007 3.122-.043 5.018.212 7.97 1.023m0-13c2.819-.831 4.715-1.076 8.029-1.023A.99.99 0 0 1 21 6v11c0 .563-.466 1.014-1.03 1.007-3.122-.043-5.018.212-7.97 1.023"
+          cardLink="/info#normativa"
+        />
 
-      <InfoSection
-        title="Inscripción"
-        description="La inscripción está abierta hasta el 1 de Mayo. No te quedes sin tu dorsal."
-        cardTitle="Inscríbete"
-        cardDescription="Asegura tu plaza en la carrera"
-        cardIcon="M8 4a4 4 0 1 0 0 8 4 4 0 0 0 0-8Zm-2 9a4 4 0 0 0-4 4v1a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-1a4 4 0 0 0-4-4H6Zm7.25-2.095c.478-.86.75-1.85.75-2.905a5.973 5.973 0 0 0-.75-2.906 4 4 0 1 1 0 5.811ZM15.466 20c.34-.588.535-1.271.535-2v-1a5.978 5.978 0 0 0-1.528-4H18a4 4 0 0 1 4 4v1a2 2 0 0 1-2 2h-4.535Z"
-        cardLink="/inscripcion"
-      />
+        <InfoSection
+          title="Ubicaciones"
+          description="Consulta los puntos de interés y las ubicaciones clave del evento."
+          cardTitle="Mapa"
+          cardDescription="Explora el mapa del evento"
+          cardIcon="M11.906 1.994a8.002 8.002 0 0 1 8.09 8.421 7.996 7.996 0 0 1-1.297 3.957.996.996 0 0 1-.133.204l-.108.129c-.178.243-.37.477-.573.699l-5.112 6.224a1 1 0 0 1-1.545 0L5.982 15.26l-.002-.002a18.146 18.146 0 0 1-.309-.38l-.133-.163a.999.999 0 0 1-.13-.202 7.995 7.995 0 0 1 6.498-12.518ZM15 9.997a3 3 0 1 1-5.999 0 3 3 0 0 1 5.999 0Z"
+          cardLink="/info#ubicaciones"
+        />
 
-      <InfoSection
-        title="Otras actividades"
-        description="Además de la carrera, podrás disfrutar de diversas actividades en el valle."
-        cardTitle="Actividades"
-        cardDescription="Consulta las actividades programadas"
-        cardIcon="M4 10h16m-8-3V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Zm3-7h.01v.01H8V13Zm4 0h.01v.01H12V13Zm4 0h.01v.01H16V13Zm-8 4h.01v.01H8V17Zm4 0h.01v.01H12V17Zm4 0h.01v.01H16V17Z"
-        cardLink="/info#actividades"
-      />
+        <InfoSection
+          title="Resultados"
+          description="Puedes ver los resultados y fotos de la carrera y otras ediciones."
+          cardTitle="Galería"
+          cardDescription="Consulta los resultados"
+          cardIcon="M4 18V8a1 1 0 0 1 1-1h1.5l1.707-1.707A1 1 0 0 1 8.914 5h6.172a1 1 0 0 1 .707.293L17.5 7H19a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1Z"
+          cardLink="/info#resultados"
+        />
 
-      <h2 class="text-3xl font-bold text-center mt-10 mb-4">
-        ¡No te lo pierdas!
-      </h2>
+        <InfoSection
+          title="Inscripción"
+          description="La inscripción está abierta hasta el 1 de Mayo. No te quedes sin tu dorsal."
+          cardTitle="Inscríbete"
+          cardDescription="Asegura tu plaza en la carrera"
+          cardIcon="M8 4a4 4 0 1 0 0 8 4 4 0 0 0 0-8Zm-2 9a4 4 0 0 0-4 4v1a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-1a4 4 0 0 0-4-4H6Zm7.25-2.095c.478-.86.75-1.85.75-2.905a5.973 5.973 0 0 0-.75-2.906 4 4 0 1 1 0 5.811ZM15.466 20c.34-.588.535-1.271.535-2v-1a5.978 5.978 0 0 0-1.528-4H18a4 4 0 0 1 4 4v1a2 2 0 0 1-2 2h-4.535Z"
+          cardLink="/inscripcion"
+        />
+
+        <InfoSection
+          title="Otras actividades"
+          description="Además de la carrera, podrás disfrutar de diversas actividades en el valle."
+          cardTitle="Actividades"
+          cardDescription="Consulta las actividades programadas"
+          cardIcon="M4 10h16m-8-3V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Zm3-7h.01v.01H8V13Zm4 0h.01v.01H12V13Zm4 0h.01v.01H16V13Zm-8 4h.01v.01H8V17Zm4 0h.01v.01H12V17Zm4 0h.01v.01H16V17Z"
+          cardLink="/info#actividades"
+        />
+      </section>
+
+      <h2 class="text-3xl font-bold text-center mt-10 mb-4">¡No te lo pierdas!</h2>
       <p class="text-center text-base mb-8 w-[90%] mx-auto">
-        El Trail Valle de Arbas es una experiencia única que combina deporte, naturaleza y comunidad.
-        ¡Te esperamos el 10 de Mayo para disfrutar juntos de este evento inolvidable!
+        El Trail Valle de Arbas es una experiencia única que combina deporte, naturaleza y
+        comunidad. ¡Te esperamos el 10 de Mayo para disfrutar juntos de este evento inolvidable!
       </p>
     </main>
     <footer>
@@ -89,7 +98,6 @@ const { title, description } = Astro.props;
     </footer>
   </body>
 </html>
-
 
 <style>
   .stiky {
