--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -19,7 +19,7 @@ const { title, description } = Astro.props;
       poster="/frameTrail2024.png"
       title="Trail Valle de Arbas 2025"
     />
-    <main>
+    <main class="max-w-[1200px] mx-auto">
       <h2 class="text-3xl font-bold text-center mt-10 mb-4">
         Descubre el <span class="text-gradient">Valle de Arbas</span>
       </h2>
@@ -64,7 +64,7 @@ const { title, description } = Astro.props;
           description="Puedes ver los resultados y fotos de la carrera y otras ediciones."
           cardTitle="Galería"
           cardDescription="Consulta los resultados"
-          cardIcon="M4 18V8a1 1 0 0 1 1-1h1.5l1.707-1.707A1 1 0 0 1 8.914 5h6.172a1 1 0 0 1 .707.293L17.5 7H19a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1Z"
+          cardIcon="M4 18V8a1 1 0 0 1 1-1h1.5l1.707-1.707A1 1 0 0 1 8.914 5h6.172a1 1 0 0 1 .707.293L17.5 7H19a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1Z M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
           cardLink="/info#resultados"
         />
 
@@ -98,6 +98,7 @@ const { title, description } = Astro.props;
     </footer>
   </body>
 </html>
+
 
 <style>
   .stiky {
