--- a/src/components/StickyMenu.astro
+++ b/src/components/StickyMenu.astro
@@ -1,9 +1,11 @@
 ---
-// Componente StickyMenu: menú superior fijo y responsive
+import { Image } from 'astro:assets';
+import logo from '../assets/logo/ms-icon-144x144.png';
 ---
+
 <header class="sticky-menu flex items-center justify-between px-4 py-4 w-full">
   <div class="flex items-center gap-3 ml-2">
-    <img src="/ms-icon-144x144.png" alt="Logo Valle de Arbas" class="h-12 w-12 object-contain" loading="lazy" />
+    <Image src={logo} alt="Logo Valle de Arbas" class="h-12 w-12 object-contain" loading="eager" />
     <span class="font-bold text-2xl text-black">Valle de Arbas</span>
   </div>
   <nav class="header-menu">
