--- a/src/components/ImageHeader.astro
+++ b/src/components/ImageHeader.astro
@@ -1,29 +1,23 @@
 ---
-import RoundedInfoField from "./fields/RoundedInfoField.astro";
-const { src, title } = Astro.props;
 import { Image } from 'astro:assets';
-import mainImage from '../assets/imgHeader/'
+const { imgName, title } = Astro.props as { imgName: keyof typeof images; title: string };
+
+import HeaderCategorias from '../assets/imgHeaders/HeaderCategorias.jpg';
+
+const images = {
+  HeaderCategorias,
+};
+
+const mainImage = images[imgName];
 ---
 
 <div class="header-image-container w-[100%] h-[60vh] pt-20" style="margin-top: -80px;">
-  <img src={src} alt={title} class="header-image" loading="eager" />
+  <Image src={mainImage} alt={title} class="header-image" loading="eager" />
   <div class="header-content">
     <div class="flex justify-center mb-4">
-      <h1 class="text-4xl text-center font-extrabold mt-4 w-[80%] md:text-5xl md:w-[90%]">{title}</h1>
-    </div>
-    <div class="flex flex-col gap-2 justify-center items-center mt-5">
-      <RoundedInfoField
-        text="9-10 Mayo 2025"
-        icon="M4 10h16m-8-3V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Zm3-7h.01v.01H8V13Zm4 0h.01v.01H12V13Zm4 0h.01v.01H16V13Zm-8 4h.01v.01H8V17Zm4 0h.01v.01H12V17Zm4 0h.01v.01H16V17Z"
-      />
-      <RoundedInfoField
-        text="Valle de Arbas, León"
-        icon="M11.906 1.994a8.002 8.002 0 0 1 8.09 8.421 7.996 7.996 0 0 1-1.297 3.957.996.996 0 0 1-.133.204l-.108.129c-.178.243-.37.477-.573.699l-5.112 6.224a1 1 0 0 1-1.545 0L5.982 15.26l-.002-.002a18.146 18.146 0 0 1-.309-.38l-.133-.163a.999.999 0 0 1-.13-.202 7.995 7.995 0 0 1 6.498-12.518ZM15 9.997a3 3 0 1 1-5.999 0 3 3 0 0 1 5.999 0Z"
-      />
-      <RoundedInfoField
-        text="Inscripción abierta"
-        icon="M8 4a4 4 0 1 0 0 8 4 4 0 0 0 0-8Zm-2 9a4 4 0 0 0-4 4v1a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-1a4 4 0 0 0-4-4H6Zm7.25-2.095c.478-.86.75-1.85.75-2.905a5.973 5.973 0 0 0-.75-2.906 4 4 0 1 1 0 5.811ZM15.466 20c.34-.588.535-1.271.535-2v-1a5.978 5.978 0 0 0-1.528-4H18a4 4 0 0 1 4 4v1a2 2 0 0 1-2 2h-4.535Z"
-      />
+      <h1 class="text-4xl text-center font-extrabold mt-10 w-[80%] md:text-5xl md:w-[90%]">
+        {title}
+      </h1>
     </div>
   </div>
 </div>
