--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -1,10 +1,54 @@
 ---
-import "../styles/global.css";
-import BasePageLayout from "../layouts/BasePageLayout.astro";
+import '../styles/global.css';
+import BasePageLayout from '../layouts/BasePageLayout.astro';
+import DistanceField from '../components/fields/DistanceField.astro';
 ---
 
-
-
-<BasePageLayout title="Categorías" description="Página web de categorías del Trail Valle de Arbas" image="">
-
+<BasePageLayout
+  title="Categorías"
+  description="Página web de categorías del Trail Valle de Arbas"
+  image="HeaderCategorias"
+  imgTitle="Categorías y Distancias"
+>
+  <section>
+    <div class="title-center pt-4">
+      <h2 class="text-2xl font-bold title-underline mt-8 mb-4">3 Distancias</h2>
+    </div>
+    <p class="text-center text-base w-[90%] mx-auto">
+      Hemos preparado varias categorías en el trail para que puedas elegir la que más se adapte a
+      ti. Desde 10km hasta 42km, para todos los niveles.
+    </p>
+    <div class="grid grid-cols-1 lg:grid-cols-3">
+        <DistanceField
+          name="Trail Arbas Infinito",
+          description="Nuestro recorrido más exigente, para los más valientes y preparados.",
+          distance="24",
+          uphill="1900"
+        />
+    </div>
+  </section>
 </BasePageLayout>
+
+<style>
+  .title-underline {
+    position: relative;
+    display: inline-block;
+    width: fit-content;
+    margin: 20px auto;
+  }
+  .title-center {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+  .title-underline::after {
+    content: '';
+    position: absolute;
+    bottom: -8px;
+    left: 0;
+    right: 0;
+    height: 3px;
+    background: linear-gradient(90deg, #f97316, #f4bb76, #f97316);
+    border-radius: 3px;
+  }
+</style>
